--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       50% { transform: scale(1.15); }
       100% { transform: scale(1.05); }
     }
-    @keyframes glow-cyan {
-      from { box-shadow: 0 0 40px #00ffff88; }
-      to { box-shadow: 0 0 60px #00ffff; }
+    @keyframes glow-fuchsia {
+        from { box-shadow: 0 0 40px #ff00ff88; }
+        to { box-shadow: 0 0 60px #ff00ffcc; }
     }
     @keyframes glow-red {
       from { box-shadow: 0 0 40px #ff000088; }
@@ -38,8 +38,8 @@
     .animation-vibrate {
       animation: vibrate 0.4s infinite;
     }
-    .animation-glow-cyan {
-      animation: glow-cyan 1.5s ease-in-out infinite alternate;
+    .animation-glow-fuchsia {
+        animation: glow-fuchsia 1s ease-in-out infinite alternate;
     }
     .animation-glow-red {
       animation: glow-red 1.2s ease-in-out infinite alternate;
